--- a/app/assets/javascripts/refinery/page-resource-picker.js.erb
+++ b/app/assets/javascripts/refinery/page-resource-picker.js.erb
@@ -8,20 +8,20 @@
     var resPrefix,
         resActions,
         res_caption_html;
-    
+
 //     the delete icon and the add caption icon
     var actions =  "<img src='/assets/refinery/icons/delete.png' width='16' height='16' class='_delete' />" +
                    "<img src='/assets/refinery/icons/user_comment.png' width='16' height='16' class='_caption' />";
-    var res_caption_html = "<div class='form-actions'><div class='form-actions-left'>" + 
+    var res_caption_html = "<div class='form-actions'><div class='form-actions-left'>" +
                            "<a class='button'><%= I18n.t('refinery.js.admin.page_resources.done') %></a></div></div>";
-    
+
 /*
  * ----------------------------------------------------
  * end of predefined items
  * ----------------------------------------------------
- */ 
+ */
 // Public init function
-  refineryPicker.init = function(resType) { 
+  refineryPicker.init = function(resType) {
 
     collection = resType;
     single = collection.slice(0,collection.length-1);
@@ -29,13 +29,13 @@
     resPicker = $('#page_' + single + '_picker');
     resCollection = $('#page_' + collection);
     resPrefix = collection + "_";
-    
+
     resActions = $("<span></span>").addClass(single + ' actions').append(actions);
     resActions.find('._delete').click(function() {
             $(this).parents('li').first().remove();
             reindex_resources();
           });
-    resActions.find('._caption').click(function(){open_resource_caps(this)});                 
+    resActions.find('._caption').click(function(){open_resource_caps(this)});
 
     resTab.find('a').click(function(){
       if (!(picker = resPicker).data('size-applied')){
@@ -44,7 +44,7 @@
         picker.css({
           height: wym_box.height()
           , width: wym_box.width()
-        }).data('size-applied', true).corner('tr 5px').corner('bottom 5px').find('.wym_box').css({
+        }).data('size-applied', true).find('.wym_box').css({
           backgroundColor: 'white'
           , height: iframe.height() + $('.page_part:first .wym_area_top').height() - parseInt($('.wym_area_top .label_inline_with_link a').css('lineHeight'))
           , width: iframe.width() - 20
@@ -65,19 +65,19 @@
       $(this).attr('data-old-id', $(this).attr('id'));
       $(this).attr('name', 'ignore_me_' + index);
       $(this).attr('id', 'ignore_me_' + index);
-  
+
       var hidden = $('<input>')
                     .addClass('caption')
                     .attr('type', 'hidden')
                     .attr('name', old_name)
                     .attr('id', $(this).attr('data-old-id'))
                     .val($(this).val());
-  
+
       $(this).parents('li').first().append(hidden);
-      
+
     });
     reset_edit_box();
-  } // end of Pinit 
+  } // end of Pinit
 
   refineryPicker.resource_added = function(resource) {
     new_list_item = (current_list_item = $('li.empty_resource')).clone();
@@ -85,20 +85,20 @@
     current_list_item.find('input:hidden:first').val(resource_id);
 
 // each resource type should return suitable html
-    current_list_item.append(resource.html);   
+    current_list_item.append(resource.html);
     current_list_item.attr('id', resPrefix + resource_id).removeClass('empty_resource');
     new_list_item.appendTo($(resCollection));
     reset_edit_box();
   }
 
-  
+
   reindex_resources = function() {
     resCollection.find('li:not(.empty_resource) textarea:hidden').each(function(i, input){
       // make the resource's name consistent with its position.
       parts = $(input).attr('name').split('_');
       parts[2] = ('' + i);
       $(input).attr('name', parts.join('_'));
-  
+
       // make the resourcess id consistent with its position.
       $(input).attr('id', $(input).attr('id').replace(/_\d/, '_' + i));
       $(input).attr('data-old-id', $(input).attr('data-old-id').replace(/_\d_/, '_'+i+'_').replace(/_\d/, '_' + i));
@@ -109,7 +109,7 @@
         parts = $(this).attr('name').split(']');
         parts[1] = ('[' + i);
         $(this).attr('name', parts.join(']'));
-  
+
         // make the resource's id consistent with its position.
         $(this).attr('id', $(this).attr('id').replace(/_\d_/, '_'+i+'_').replace(/_\d/, '_'+i));
       })
@@ -121,7 +121,7 @@
     // move the textarea out of the list item, and then move the textarea back into it when we click done.
     (list_item = icon.parents('li').first()).addClass('current_caption_list_item');
     textarea = list_item.find('.textarea_wrapper_for_wym > textarea');
-  
+
     textarea.after($(res_caption_html));
     textarea.parent().dialog({
        title: "<%= I18n.t('refinery.js.admin.page_resources.add_caption') %>"
@@ -131,40 +131,40 @@
        , width: 928
        , height: 530
      });
-  
+
     $('.ui-dialog:visible .ui-dialog-titlebar-close, .ui-dialog:visible .form-actions a.button')
       .on('click',
         $.proxy(function() {
-          
+
           // first, update the editor because we're blocking event bubbling (third argument to bind set to false).
           $(this).data('wymeditor').update();
           $(this).removeClass('wymeditor')
                  .removeClass('active_rotator_wymeditor');
-  
+
           objParent = $(this).parent();
           objParent.appendTo('li.current_caption_list_item').dialog('close').data('dialog', null);
           objParent.find('.form-actions').remove();
           objParent.find('.wym_box').remove();
           objParent.css('height', 'auto');
           objParent.removeClass('ui-dialog-content').removeClass('ui-widget-content');
-  
+
           $('li.current_caption_list_item').removeClass('current_caption_list_item');
-  
+
           $('.ui-dialog, .ui-widget-overlay:visible').remove();
-  
+
           $('#' + $(this).attr('data-old-id')).val($(this).val());
           console.log()
         }, textarea)
       );
-  
+
     textarea.addClass('wymeditor active_rotator_wymeditor widest').wymeditor(wymeditor_boot_options);
-  }      
+  }
 
   reset_edit_box = function() {
     WYMeditor.onload_functions.push(function(){
       $('.wym_box').css({'width':null});
     });
-  
+
     resCollection.sortable({
       'tolerance': 'pointer'
       , 'placeholder': 'placeholder'
@@ -186,13 +186,13 @@
   }   // end of reset_edit_box
   /*
    * ----------------------------------------------------
-   */  
+   */
    // return {
      // init: Pinit()
    // }
 
 })( window.refineryPicker = window.refineryPicker || {}, jQuery );
 
-$(document).ready(function(){ 
-  refineryPicker.init( "resources") 
+$(document).ready(function(){
+  refineryPicker.init( "resources")
 })
